src/ui/snapshots/state/migration/results/bottom_bar_fully_visible.snap
---
source: src/ui/state/migration/results.rs
expression: harness.backend()
---
" ✅ Eligible (2) │ ❓ Unsure (0) │ ❌ Not Merged (1)                            " Hidden by multi-width symbols: [(2, " "), (20, " "), (36, " ")]
"                                                                                "
"                                                                                "
"┌Eligible PRs - Ready for tagging──────────────────────────────────────────────┐"
"│      PR #     Date         Title           Author          Work Items        │"
"│→     101      2024-01-12   Update user pro Bob Wilson      #1002 (Active)    │"
"│      100      2024-01-10   Fix login bug   Alice Johnson   #1001 (Closed)    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Navigation:                                                                   │"
"│↑/↓ - Navigate PRs | ←/→ - Switch tabs | o - Open PR in browser               │"
"│d - Toggle details | q - Quit                                                 │"
"│Toggle Eligibility:                                                           │"
"│Space - Toggle PR eligibility (cycles through states)                         │"
"│Next Step:                                                                    │"
"│Enter - Proceed to Version Input for Tagging                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
