src/ui/snapshots/state/migration/results/display.snap
---
source: src/ui/state/migration/results.rs
expression: harness.backend()
---
" ✅ Eligible (2) │ ❓ Unsure (0) │ ❌ Not Merged (1)                            " Hidden by multi-width symbols: [(2, " "), (20, " "), (36, " ")]
"                                                                                "
"                                                                                "
"┌Eligible PRs - Ready for tagging──────────────────────────────────────────────┐"
"│#100 Fix login bug →❌                                                        │" Hidden by multi-width symbols: [(22, " ")]
"│  By: Alice Johnson | Work Items: 1                                           │"
"│#101 Update user profile page design →❌                                      │" Hidden by multi-width symbols: [(40, " ")]
"│  By: Bob Wilson | Work Items: 1                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Navigation:                                                                   │"
"│↑/↓ - Navigate PRs | ←/→ - Switch tabs | o - Open PR in browser               │"
"│d - Toggle details | q - Quit                                                 │"
"│Toggle Eligibility:                                                           │"
"│Space - Toggle PR eligibility (cycles through states)                         │"
"│Next Step:                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
