src/ui/snapshots/state/migration/results/manual_not_eligible_override.snap
---
source: src/ui/state/migration/results.rs
assertion_line: 797
expression: harness.backend()
---
" ✅ Eligible (1) │ ❓ Unsure (0) │ ❌ Not Merged (2)                            " Hidden by multi-width symbols: [(2, " "), (20, " "), (36, " ")]
"                                                                                "
"                                                                                "
"┌Not Merged PRs - Not ready for migration──────────────────────────────────────┐"
"│#102 Add analytics tracking → Eligible                                        │"
"│  By: Carol Martinez |                                                        │"
"│  WI: #1003(Resolved), #1004(Active)                                          │"
"│#100 Fix login bug ❌ [Manual Override] → Eligible                            │" Hidden by multi-width symbols: [(21, " ")]
"│  By: Alice Johnson |                                                         │"
"│  WI: #1001(Closed)                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Navigation:                                                                   │"
"│↑/↓ - Navigate PRs | ←/→ - Switch tabs | o - Open PR in browser               │"
"│d - Toggle details | q - Quit                                                 │"
"│Toggle Eligibility:                                                           │"
"│Space - Toggle PR eligibility (cycles through states)                         │"
"│Next Step:                                                                    │"
"│Enter - Proceed to Version Input for Tagging                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
