src/ui/snapshots/state/migration/results/not_merged_tab.snap
---
source: src/ui/state/migration/results.rs
expression: harness.backend()
---
" ✅ Eligible (2) │ ❓ Unsure (0) │ ❌ Not Merged (1)                                                                    " Hidden by multi-width symbols: [(2, " "), (20, " "), (36, " ")]
"                                                                                                                        "
"                                                                                                                        "
"┌Not Merged PRs - Not ready for migration──────────────────────────────────────────────────────────────────────────────┐"
"│#102 Add analytics tracking → Eligible                                                                                │"
"│  By: Carol Martinez | Work Items: 2                                                                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Navigation:                                                                                                           │"
"│↑/↓ - Navigate PRs | ←/→ - Switch tabs | o - Open PR in browser                                                       │"
"│d - Toggle details | q - Quit                                                                                         │"
"│Toggle Eligibility:                                                                                                   │"
"│Space - Toggle PR eligibility (cycles through states)                                                                 │"
"│Next Step:                                                                                                            │"
"│Enter - Proceed to Version Input for Tagging                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
