src/ui/snapshots/state/migration/results/unsure_tab.snap
---
source: src/ui/state/migration/results.rs
expression: harness.backend()
---
" ✅ Eligible (1) │ ❓ Unsure (1) │ ❌ Not Merged (1)                            " Hidden by multi-width symbols: [(2, " "), (20, " "), (36, " ")]
"                                                                                "
"                                                                                "
"┌Unsure PRs - Require manual review────────────────────────────────────────────┐"
"│      PR #     Date         Title           Author          Work Items        │"
"│→     101      2024-01-12   Update user pro Bob Wilson      #1002 (Active)    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Navigation:                                                                   │"
"│↑/↓ - Navigate PRs | ←/→ - Switch tabs | o - Open PR in browser               │"
"│d - Toggle details | q - Quit                                                 │"
"│Toggle Eligibility:                                                           │"
"│Space - Toggle PR eligibility (cycles through states)                         │"
"│Next Step:                                                                    │"
"│Enter - Proceed to Version Input for Tagging                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
