src/ui/snapshots/state/migration/results/with_details.snap
---
source: src/ui/state/migration/results.rs
expression: harness.backend()
---
" ✅ Eligible (2) │ ❓ Unsure (0) │ ❌ Not Merged (1)                                                                    " Hidden by multi-width symbols: [(2, " "), (20, " "), (36, " ")]
"                                                                                                                        "
"                                                                                                                        "
"┌Eligible PRs - Ready for tagging──────────────────────────────────────┐┌Details───────────────────────────────────────┐"
"│#100 Fix login bug → Not Eligible                                     ││PR Details:                                   │"
"│  By: Alice Johnson | Work Items: 1                                   ││ID: #100                                      │"
"│#101 Update user profile page design → Not Eligible                   ││Title: Fix login bug                          │"
"│  By: Bob Wilson | Work Items: 1                                      ││Created By: Alice Johnson                     │"
"│                                                                      ││                                              │"
"│                                                                      ││Work Items:                                   │"
"│                                                                      ││#1001 - Login button not responding (Closed)  │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Navigation:                                                                                                           │"
"│↑/↓ - Navigate PRs | ←/→ - Switch tabs | o - Open PR in browser                                                       │"
"│d - Toggle details | q - Quit                                                                                         │"
"│Toggle Eligibility:                                                                                                   │"
"│Space - Toggle PR eligibility (cycles through states)                                                                 │"
"│Next Step:                                                                                                            │"
"│Enter - Proceed to Version Input for Tagging                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
